tests/baselines/reference/accessibilityModifiers(strict=true).errors.txt
accessibilityModifiers.ts(3,20): error TS7008: Member 'privateProperty' implicitly has an 'any' type.
accessibilityModifiers.ts(8,22): error TS7008: Member 'protectedProperty' implicitly has an 'any' type.
accessibilityModifiers.ts(13,19): error TS7008: Member 'publicProperty' implicitly has an 'any' type.
accessibilityModifiers.ts(21,12): error TS1029: 'private' modifier must precede 'static' modifier.
accessibilityModifiers.ts(21,20): error TS7008: Member 'privateProperty' implicitly has an 'any' type.
accessibilityModifiers.ts(22,12): error TS1029: 'private' modifier must precede 'static' modifier.
accessibilityModifiers.ts(23,12): error TS1029: 'private' modifier must precede 'static' modifier.
accessibilityModifiers.ts(24,12): error TS1029: 'private' modifier must precede 'static' modifier.
accessibilityModifiers.ts(26,12): error TS1029: 'protected' modifier must precede 'static' modifier.
accessibilityModifiers.ts(26,22): error TS7008: Member 'protectedProperty' implicitly has an 'any' type.
accessibilityModifiers.ts(27,12): error TS1029: 'protected' modifier must precede 'static' modifier.
accessibilityModifiers.ts(28,12): error TS1029: 'protected' modifier must precede 'static' modifier.
accessibilityModifiers.ts(29,12): error TS1029: 'protected' modifier must precede 'static' modifier.
accessibilityModifiers.ts(31,12): error TS1029: 'public' modifier must precede 'static' modifier.
accessibilityModifiers.ts(31,19): error TS7008: Member 'publicProperty' implicitly has an 'any' type.
accessibilityModifiers.ts(32,12): error TS1029: 'public' modifier must precede 'static' modifier.
accessibilityModifiers.ts(33,12): error TS1029: 'public' modifier must precede 'static' modifier.
accessibilityModifiers.ts(34,12): error TS1029: 'public' modifier must precede 'static' modifier.
accessibilityModifiers.ts(39,13): error TS1028: Accessibility modifier already seen.
accessibilityModifiers.ts(39,30): error TS7008: Member 'property' implicitly has an 'any' type.
accessibilityModifiers.ts(40,12): error TS1028: Accessibility modifier already seen.
accessibilityModifiers.ts(41,13): error TS1028: Accessibility modifier already seen.
accessibilityModifiers.ts(42,12): error TS1028: Accessibility modifier already seen.


==== accessibilityModifiers.ts (23 errors) ====
    // No errors
    class C {
        private static privateProperty;
                       ~~~~~~~~~~~~~~~
!!! error TS7008: Member 'privateProperty' implicitly has an 'any' type.
        private static privateMethod() { }
        private static get privateGetter() { return 0; }
        private static set privateSetter(a: number) { }
    
        protected static protectedProperty;
                         ~~~~~~~~~~~~~~~~~
!!! error TS7008: Member 'protectedProperty' implicitly has an 'any' type.
        protected static protectedMethod() { }
        protected static get protectedGetter() { return 0; }
        protected static set protectedSetter(a: number) { }
    
        public static publicProperty;
                      ~~~~~~~~~~~~~~
!!! error TS7008: Member 'publicProperty' implicitly has an 'any' type.
        public static publicMethod() { }
        public static get publicGetter() { return 0; }
        public static set publicSetter(a: number) { }
    }
    
    // Errors, accessibility modifiers must precede static
    class D {
        static private privateProperty;
               ~~~~~~~
!!! error TS1029: 'private' modifier must precede 'static' modifier.
                       ~~~~~~~~~~~~~~~
!!! error TS7008: Member 'privateProperty' implicitly has an 'any' type.
        static private privateMethod() { }
               ~~~~~~~
!!! error TS1029: 'private' modifier must precede 'static' modifier.
        static private get privateGetter() { return 0; }
               ~~~~~~~
!!! error TS1029: 'private' modifier must precede 'static' modifier.
        static private set privateSetter(a: number) { }
               ~~~~~~~
!!! error TS1029: 'private' modifier must precede 'static' modifier.
    
        static protected protectedProperty;
               ~~~~~~~~~
!!! error TS1029: 'protected' modifier must precede 'static' modifier.
                         ~~~~~~~~~~~~~~~~~
!!! error TS7008: Member 'protectedProperty' implicitly has an 'any' type.
        static protected protectedMethod() { }
               ~~~~~~~~~
!!! error TS1029: 'protected' modifier must precede 'static' modifier.
        static protected get protectedGetter() { return 0; }
               ~~~~~~~~~
!!! error TS1029: 'protected' modifier must precede 'static' modifier.
        static protected set protectedSetter(a: number) { }
               ~~~~~~~~~
!!! error TS1029: 'protected' modifier must precede 'static' modifier.
    
        static public publicProperty;
               ~~~~~~
!!! error TS1029: 'public' modifier must precede 'static' modifier.
                      ~~~~~~~~~~~~~~
!!! error TS7008: Member 'publicProperty' implicitly has an 'any' type.
        static public publicMethod() { }
               ~~~~~~
!!! error TS1029: 'public' modifier must precede 'static' modifier.
        static public get publicGetter() { return 0; }
               ~~~~~~
!!! error TS1029: 'public' modifier must precede 'static' modifier.
        static public set publicSetter(a: number) { }
               ~~~~~~
!!! error TS1029: 'public' modifier must precede 'static' modifier.
    }
    
    // Errors, multiple accessibility modifier
    class E {
        private public protected property;
                ~~~~~~
!!! error TS1028: Accessibility modifier already seen.
                                 ~~~~~~~~
!!! error TS7008: Member 'property' implicitly has an 'any' type.
        public protected method() { }
               ~~~~~~~~~
!!! error TS1028: Accessibility modifier already seen.
        private protected get getter() { return 0; }
                ~~~~~~~~~
!!! error TS1028: Accessibility modifier already seen.
        public public set setter(a: number) { }
               ~~~~~~
!!! error TS1028: Accessibility modifier already seen.
    }
    